<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/black"
    tools:context=".LoginFragment">


    <TextView
        android:id="@+id/name_page"
        style="@style/semibold_20sp_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/login_to_personal_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_page">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                android:id="@+id/search_job_text"
                style="@style/text_medium_16sp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_text_login"
                style="@style/input_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/responses"
                android:drawablePadding="8dp"
                android:hint="@string/mail_or_phone"
                android:inputType="textEmailAddress"
                android:paddingVertical="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="32dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_job_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_continue"
                style="@style/button_blue_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="false"
                android:gravity="center"
                android:paddingHorizontal="46dp"
                android:paddingVertical="12dp"
                android:text="@string/continue_button"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/error_text" />

            <TextView
                android:id="@+id/textView3"
                style="@style/regular_14sp_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:gravity="end"
                android:text="@string/login_with_password"
                app:layout_constraintBottom_toBottomOf="@+id/button_continue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_continue"
                app:layout_constraintTop_toTopOf="@+id/button_continue" />

            <TextView
                android:id="@+id/error_text"
                style="@style/regular_14sp_red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_email_error"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/edit_text_login"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_login"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/close_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/close"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_login"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_login"
                app:layout_constraintTop_toTopOf="@+id/edit_text_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp">

            <TextView
                style="@style/text_medium_16sp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_search" />

            <TextView
                style="@style/regular_14sp_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/search_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_search_people"
                style="@style/green_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingHorizontal="46dp"
                android:paddingVertical="12dp"
                android:text="@string/continue_button"
                android:textAllCaps="false"
                 />


        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>